--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title: Not Pure Poole
 description: A simple, beautiful, and powerful Jekyll theme for blogs
-url: https://minstory98.github.io/
+url: https://gsw04071.github.io/
 avatar: /avatar.jpeg
 paginate: 5
 permalink: pretty
