--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title: Not Pure Poole
-description: A simple, beautiful, and powerful Jekyll theme for blogs
+title: 민스토리의 개발이야기
+description: 소소한 기록을 담은 블로그 입니다 : )
 url: https://gsw04071.github.io/
 avatar: /avatar.jpeg
 paginate: 5
