--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,9 +1,9 @@
 - title: Email
-  url: mailto://ekals78@naver.com
+  url: mailto://vszhub@gmail.com
   icon: fas fa-envelope
-- title: Blog
-  url: https://blog.naver.com/minstory98
-  icon: fab fa-blogger-b
+- title: Twitter
+  url: https://twitter.com/vszhub
+  icon: fab fa-twitter
 - title: GitHub
-  url: https://github.com/gsw04071
+  url: https://github.com/vszhub/not-pure-poole
   icon: fab fa-github
