--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Damin Blog
 description: web Developer Repository
 url: https://gsw04071.github.io
-avatar: /avatar.jpeg
+avatar: /avatar.jpg
 paginate: 5
 permalink: pretty
 cover_image: /bg.jpeg
