--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://gsw04071.github.io
 avatar: /avatar.jpg
 paginate: 5
 permalink: pretty
-cover_image: /bg.jpeg
+cover_image: /bg.jpg
 
 # Gems
 plugins:
