--- a/_data/social.yml
+++ b/_data/social.yml
@@ -2,7 +2,7 @@
   url: mailto://ekals78@naver.com
   icon: fas fa-envelope
 - title: Twitter
-  url: https://twitter.com/vszhub
+  url: https://blog.naver.com/minstory98
   icon: fab fa-blogger-b
 - title: GitHub
   url: https://github.com/gsw04071/gsw04071.github.io
